springdemo-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: springdemo
  labels:
      app: springdemo
spec:
  selector:
    app: springdemo
  ports:
  - port: 8080
    name: http
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springdemo-v1
  labels:
    app: springdemo
spec:
  selector:
    matchLabels:
      app: springdemo
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: springdemo
        version: v1
    spec:
      containers:
      - name: springdemo
        image: olegkrupenya/springdemo:v5
        ports:
        - containerPort: 8080
