gtwy-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: springdemo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        name: http
        number: 80
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: springdemo-vs
spec:
  hosts:
    - "*"
  gateways:
    - springdemo-gateway
  http:
    - match:
        - uri:
            prefix: "/"
        - uri:
            prefix: "/demo/"
      route:
        - destination:
            port:
              number: 8080
            host: springdemo
