response-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: lua-filter
spec:
  workloadSelector:
    labels:
      mesh: istio
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: ANY
        listener:
          filterChain:
            filter:
              name: "envoy.http_connection_manager"
              subFilter:
                name: "envoy.router"
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.lua
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
            inline_code: |
              -- Called on the request path.
              function envoy_on_request(request_handle)
                request_handle:logInfo("Hello World.")
                request_handle:headers():add("x-custom", "worked")
              end
              -- Called on the response path.
              function envoy_on_response(response_handle)
                response_handle:logInfo("Hello World.")
                response_handle:headers():add("x-custom", "worked")
              end
